<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="25dp"
                android:text="@string/activities123"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="138dp"
                tools:layout_editor_absoluteY="62dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="295dp"
                android:layout_height="116dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:text="@string/the_stages"
                tools:layout_editor_absoluteX="59dp"
                tools:layout_editor_absoluteY="103dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="226dp"
                android:layout_height="30dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="10dp"
                android:text="@string/how_to_call"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="92dp"
                tools:layout_editor_absoluteY="233dp" />

            <TextView
                android:id="@+id/exampleact"
                android:layout_width="310dp"
                android:layout_height="159dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="16dp"
                android:text="@string/sendintent"
                tools:layout_editor_absoluteX="72dp"
                tools:layout_editor_absoluteY="286dp" />

            <TextView
                android:id="@+id/example2act"
                android:layout_width="289dp"
                android:layout_height="238dp"
                android:layout_marginLeft="60dp"
                android:text="@string/activity_ex"
                tools:layout_editor_absoluteX="72dp"
                tools:layout_editor_absoluteY="445dp" />

            <Button
                android:id="@+id/goback_button"
                android:layout_width="90dp"
                android:layout_height="28dp"
                android:layout_marginStart="150dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="150dp"
                android:layout_marginBottom="12dp"
                android:background="#D62B2B"
                android:text="@string/go_back"
                android:textColor="@android:color/background_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonquery" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>