<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Broadcast">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:text="@string/broadcast_receiver"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="106dp"
                tools:layout_editor_absoluteY="26dp" />

            <TextView
                android:id="@+id/br4"
                android:layout_width="317dp"
                android:layout_height="312dp"
                android:layout_marginLeft="55dp"
                android:text="@string/declarebr"
                tools:layout_editor_absoluteX="36dp"
                tools:layout_editor_absoluteY="67dp" />

            <TextView
                android:id="@+id/br_receiver"
                android:layout_width="wrap_content"
                android:layout_height="252dp"
                android:layout_marginStart="36dp"
                android:layout_marginLeft="180dp"
                android:layout_marginEnd="36dp"
                android:gravity="center_horizontal|left"
                android:paddingLeft="20dp"
                android:text="@string/breceive"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.805"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="322dp" />

            <Button
                android:id="@+id/amberView3"
                android:layout_width="308dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:background="@drawable/amber2"
                android:text="@string/amber_alert" />


            <Button
                android:id="@+id/back_button2"
                android:layout_width="90dp"
                android:layout_height="22dp"
                android:layout_marginStart="150dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="150dp"
                android:layout_marginBottom="12dp"
                android:background="#D62B2B"
                android:text="@string/go_back"
                android:textColor="@android:color/background_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonquery" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>